infra/k8s/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: rafcetario
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 376129848196.dkr.ecr.eu-west-1.amazonaws.com/rafcetario-backend:latest
          ports:
            - containerPort: 8000
      nodeSelector:
        kubernetes.io/os: linux
