infra/k8s/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: rafcetario
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: 376129848196.dkr.ecr.eu-west-1.amazonaws.com/rafcetario-frontend:latest
        ports:
        - containerPort: 80
      nodeSelector:
        kubernetes.io/os: linux
