infra/k8s/service-frontend.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend-service
  namespace: rafcetario
  labels:
    app: frontend

spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: frontend
